--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -14,10 +14,10 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Checkout submodules
-      run: git submodule update --init --recursive
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
     - name: Use Node.js ${{matrix.node-version}}
       uses: actions/setup-node@v1
