--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -14,10 +14,14 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - name: Checkout repository and submodules
-      uses: actions/checkout@v2
-      with:
-        submodules: recursive
+    - uses: actions/checkout@v2
+    - name: Checkout submodules using a PAT
+      run: |
+        git config --file .gitmodules --get-regexp url | while read url; do
+          git config --file=.gitmodules $(echo "$url" | sed -E "s/git@github.com:|https:\/\/github.com\//https:\/\/${{ secrets.CI_PAT }}:${{ secrets.CI_PAT }}@github.com\//")
+        done
+        git submodule sync
+        git submodule update --init --recursive
 
     - name: Use Node.js ${{matrix.node-version}}
       uses: actions/setup-node@v1
