--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.1
       with:
-        token: ${{github.token}}
+        token: ${{ secrets.PAT }}
         submodules: recursive
 
     - name: Use Node.js ${{matrix.node-version}}
