--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "framework"]
 	path = framework
-	url = https://github.com/PluginCube/framework.git
+	url = git@github.com:PluginCube/framework.git
