--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build Release Zip
+name: Release A New Version
 
 on:
   workflow_dispatch:
@@ -36,3 +36,17 @@ jobs:
         git push
       env:
         CI: true
+
+  - name: Deploy to Freemius
+    uses: buttonizer/freemius-deploy@v0.1.2
+    with:
+      file_name: plugin.zip
+      release_mode: pending
+      version: ${{ github.event.release.tag_name }}
+      sandbox: false
+    env:
+      PUBLIC_KEY: ${{ secrets.FS_PUBLIC_KEY }}
+      DEV_ID: ${{ secrets.FS_DEV_ID }}
+      SECRET_KEY: ${{ secrets.FS_SECRET_KEY }}
+      PLUGIN_SLUG: ${{ secrets.FS_PLUGIN_SLUG }}
+      PLUGIN_ID: ${{ secrets.FS_PLUGIN_ID }}
