--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,41 +1,16 @@
-name: Release A New Version
+name: release
 
 on:
   workflow_dispatch:
-  release:
-      types:
-      - created
+  workflow_run:
+    workflows: ["zip"]
+    branches: [main]
+    types: 
+      - completed
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    steps:
-    - uses: actions/checkout@v2.3.1
-      with:
-        token: ${{ secrets.PAT }}
-        submodules: recursive
-
-    - name: Use Node.js ${{matrix.node-version}}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{matrix.node-version}}
-    - run: npm install
-    - run: npm run build:zip --if-present
-
-    - name: Commit Changes
-      run: |
-        git config --global user.name 'Omar Badran'
-        git config --global user.email 'omarbadran@users.noreply.github.com'
-        git add --all
-        git commit -am "Action: Build Release Zip" || true
-        git push
-      env:
-        CI: true
 
   - name: Deploy to Freemius
     uses: buttonizer/freemius-deploy@v0.1.2
