--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
+    steps:
       - name: Deploy to Freemius
         uses: buttonizer/freemius-deploy@v0.1.2
         with:
