--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -33,6 +33,6 @@ jobs:
           git config --global user.email 'omarbadran@users.noreply.github.com'
           git add --all
           git commit -am "Action: Build Release Zip" || true
-          git push
+          git push origin HEAD:master --force
         env:
           CI: true
